// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hs fetch --help 1`] = `
"Usage: hs fetch [options]

Fetch a file, directory or module from HubSpot and write to a path on your computer

Options:
  -V, --version      output the version number
  --config <config>  path to a config file
  --portal <portal>  HubSpot portal id or name from config
  --debug            set log level to debug
  --overwrite        overwrite existing files
  --mode <mode>      read from <draft | publish>
  -h, --help         output usage information"
`;

exports[`hscms fetch --help 1`] = `
"Usage: hscms fetch [options]

Fetch a file, directory or module from HubSpot and write to a path on your computer

Options:
  -V, --version      output the version number
  --config <config>  path to a config file
  --portal <portal>  HubSpot portal id or name from config
  --debug            set log level to debug
  --overwrite        overwrite existing files
  --mode <mode>      read from <draft | publish>
  -h, --help         output usage information"
`;
